# voltra

./: .dockerignore  .gitignore  .txt  AGENTS.md  BENCHMARK.md  CLAUDE.md  COOLIFY_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT.md  DOKPLOY_DEPLOYMENT.md  Dockerfile  LICENSE  OPERATIONS.md  PHASE_0_PLANNING.md  PHASE_1_SPECIFICATION.md  PRODUCTION_AUDIT.md  PRODUCTION_READY.md  PRODUCTION_STATUS.md  README.md  README_INIT.md  SELF_HOSTED_SETUP.md  TODO.md  VERSIONING.md  build.rs  client_sdk.py  docker-compose.dokploy.yml  docker-compose.single.yml  docker-compose.yml  example_game.py  find_claude.py  main.py  neondb.toml  patch_cargo.py  patch_main.py  soak.csv  soak0_500c.csv  test_client.py  voltra.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench/: run_clients.sh
benches/: end_to_end.rs  fps_scale.rs  scenario1_pure_engine.rs  scenario2_full_pipeline.rs  scenario3_game_genres.rs  throughput.rs
deploy/: DOKPLOY.md  README.md  install.sh  neondb.service  proxmox-install.sh  voltra.service
desktop/: Cargo.toml  README.md
desktop/src/: main.rs
docs/: RAFT_PROPOSAL.md  SELF_HOSTING.md  architecture.md  cli-reference.md  client-prediction.md  cluster.md  deployment.md  faq.md  getting-started.md  neon-v1-runtime.md  protocol.md  reducers-csharp.md  reducers-go.md  reducers.md  sdk-rust.md  sdk-typescript.md  voltra-v1-runtime.md  where-voltra-fits.md
docs/neon/: 01-getting-started.md  02-project-structure.md  03-tables.md  04-reducers.md  05-data-access.md  06-control-flow.md  07-operators-and-types.md  08-builtins-math-random.md  09-builtins-strings.md  10-builtins-arrays.md  11-builtins-table-queries.md  12-builtins-cluster.md  13-complete-examples.md  README.md
docs/voltra/: 01-getting-started.md  02-project-structure.md  03-tables.md  04-reducers.md  05-data-access.md  06-control-flow.md  07-operators-and-types.md  08-builtins-math-random.md  09-builtins-strings.md  10-builtins-arrays.md  11-builtins-table-queries.md  12-builtins-cluster.md  13-complete-examples.md  README.md
editors/vscode/: README.md  language-configuration.json  package.json
migrations/: README.md
modules/: increment_js.js  increment_wasm.wat
mygame/: README_INIT.md  neondb.toml
neondb-client-rust/: Cargo.toml
neondb-client-rust/src/: client.rs  error.rs  lib.rs  protocol.rs  types.rs
neondb-client-rust/tests/: client.rs
neondb-client-ts/: package-lock.json  package.json  test-output.txt
neondb-client-ts/src/: client.ts  hooks.tsx  protocol.ts  types.ts
neondb-macros/: Cargo.toml
neondb-macros/src/: lib.rs  reducer.rs  table.rs
neondb-reducer/: Cargo.toml
neondb-reducer/src/: lib.rs
src/: admin.rs  admin_dashboard.html  auth.rs  backup.rs  chat.rs  cli.rs  compression.rs  config.rs  error.rs  hlc.rs  leaderboard.rs  lib.rs  main.rs  matchmaking.rs  metrics.rs  migrations.rs  presence.rs  scheduler_fix.patch  schema.rs  server.rs  stat_sync.rs  subscriptions.rs  tenant.rs  tracing_setup.rs  ttl.rs  updater.rs  worker_pool.rs
src/app/: admin.rs  bench.rs  bootstrap.rs  build.rs  cli.rs  mod.rs  scaffold.rs  templates.rs
src/auth_service/: mod.rs
src/cluster/: fanout.rs  gossip.rs  lobby_route.rs  migration.rs  mod.rs  proxy.rs  regions.rs  ring.rs
src/codegen/: mod.rs
src/dsl/: ast.rs  codegen.rs  error.rs  lexer.rs  mod.rs  parser.rs
src/engine_templates/: godot_README.md  godot_neondb_client.gd  godot_voltra_client.gd  unity_NeonDBBehaviour.cs  unity_NeonDBClient.cs  unity_README.md  unity_VoltraBehaviour.cs  unity_VoltraClient.cs
src/mvcc/: aof.rs  mod.rs
src/network/: message.rs  mod.rs  protocol.rs  rate_limiter.rs  tls.rs  websocket.rs
src/persistence/: mod.rs
src/persistent/: mod.rs
src/pg/: catalog.rs  executor.rs  mod.rs  tests.rs  types.rs
src/raft/: http.rs  mod.rs  network.rs  state_machine.rs  storage.rs
src/redis/: cmd_geo.rs  cmd_hash_list.rs  cmd_set_zset.rs  cmd_stream.rs  cmd_string.rs  engine.rs  mod.rs  pubsub.rs  resp.rs  tests.rs  util.rs
src/reducer/: backend.rs  context.rs  mod.rs  native.rs  registry.rs  v8.rs  wasm.rs
src/replication/: mod.rs
src/runtime/: aoi.rs  aoi_broadcast.rs  ecs.rs  lobby_runtime.rs  mod.rs  registry.rs  tick.rs
src/sql/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs
src/table/: columnar.rs  dispatcher.rs  eviction.rs  mod.rs
src/vql/: ast.rs  error.rs  executor.rs  lexer.rs  mod.rs  parser.rs
src/wal/: batch_writer.rs  entry.rs  mod.rs  reader.rs  snapshot.rs  writer.rs
templates/: basic_add_item.js.txt  basic_client.ts.txt  basic_delete_user.js.txt  basic_grant_role.js.txt  basic_login.js.txt  basic_logout.js.txt  basic_readme.md.txt  basic_reducers.rs.txt  basic_register.js.txt  basic_remove_item.js.txt  basic_schema.toml.txt  basic_sub_player.js.txt  basic_update_profile.js.txt  chat_ban_user.js.txt  chat_cleanup_presence.js.txt  chat_client.ts.txt  chat_create_room.js.txt  chat_create_thread.js.txt  chat_delete_message.js.txt  chat_delete_room.js.txt  chat_edit_message.js.txt  chat_join_room.js.txt  chat_leave_room.js.txt  chat_react.js.txt  chat_readme.md.txt  chat_reducers.rs.txt  chat_reply.js.txt  chat_schema.toml.txt  chat_send_message.js.txt  chat_set_online.js.txt  chat_set_typing.js.txt  chat_unban_user.js.txt  embedded_cargo.toml.txt  embedded_main.rs.txt  g_basic_damage.js.txt  g_basic_despawn.js.txt  g_basic_heal.js.txt  g_basic_move.js.txt  g_basic_readme.md.txt  g_basic_schema.toml.txt  (+197 more)
tests/: cluster_integration_test.rs  crash_recovery_test.rs  horizontal_scaling_test.rs  integration.rs  protocol_fuzz_test.rs  raft_consensus_test.rs  readpath_profile.rs  schema_validation_test.rs  security_tests.rs  vql_game_test.rs  wal_recovery_test.rs
voltra-client-rust/: Cargo.toml
voltra-client-rust/src/: client.rs  error.rs  lib.rs  protocol.rs  types.rs
voltra-client-rust/tests/: client.rs
voltra-client-ts/: README.md  package-lock.json  package.json  tsconfig.json
voltra-client-ts/src/: client.ts  hooks.tsx  index.ts  protocol.ts  types.ts
voltra-macros/: Cargo.toml
voltra-reducer/: Cargo.toml
voltra-reducer/src/: lib.rs
(+13 files in other folders)
