[package]
name = "neondb"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = "0.4"
zstd = "0.12"
libc = "0.2"
mimalloc = { version = "0.1.52", optional = true }
tokio = { version = "1.35", features = ["full"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
parking_lot = "0.12"
crc32fast = "1.3"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
toml = "0.7"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# High-throughput concurrency primitives
dashmap = "5.5"                          # lock-free concurrent HashMap
kanal = "0.1"                            # fast MPMC channel (replaces SegQueue + sleep)
bytes = "1.5"                            # Arc<Bytes> for zero-copy sub fan-out
crossbeam = "0.8"                        # crossbeam utilities
crossbeam-channel = "0.5"               # used in WAL batch writer
num_cpus = "1.16"                        # parallel reducer workers
hdrhistogram = "7.5"                     # latency percentile tracking (bench + end_to_end)
arc-swap = "1.6"                         # atomic Arc swaps for hot config
flume = "0.11"                           # backup MPSC channel

reqwest = { version = "0.11", features = ["blocking", "json"] }

# Raft consensus (distributed leader election + log replication)
# storage-v2 enables the split RaftLogStorage + RaftStateMachine traits
# (replaces the deprecated monolithic RaftStorage trait).
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
anyerror = "0.1"   # error type used by openraft's StorageError constructors
base64 = "0.21"
jsonwebtoken = "9"

# JS reducer backend (pure-Rust engine, compiles on Windows/Linux/macOS)
boa_engine = { version = "0.19", features = ["annex-b"] }
boa_gc = "0.19"

# WASM reducer backend
wasmtime = { version = "21", features = ["cranelift"] }
wat = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# ── Standalone benchmark binary ──────────────────────────────────────────────
[[bin]]
name = "neondb-bench"
path = "src/bin/neondb_bench.rs"

# ── Existing benchmarks ───────────────────────────────────────────────────────
[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "end_to_end"
harness = false

# ── TPS scenario benchmarks ───────────────────────────────────────────────────
[[bench]]
name = "scenario1_pure_engine"
harness = false

[[bench]]
name = "scenario2_full_pipeline"
harness = false

[[bench]]
name = "scenario3_game_genres"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
default = ["simd", "mimalloc"]
simd = []
