[workspace]
members  = ["neondb-macros", "neondb-client-rust"]
resolver = "2"

[package]
name = "neondb"
version = "1.0.7"
edition = "2021"

[dependencies]
socket2 = { version = "0.5", features = ["all"] }
core_affinity = "0.8"
zstd = "0.12"
libc = "0.2"
mimalloc = { version = "0.1.52", default-features = false, optional = true }
tokio = { version = "1.35", features = ["full"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
parking_lot = "0.12"
crc32fast = "1.3"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
toml = "0.7"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# High-throughput concurrency primitives
smallvec = { version = "1.11", features = ["union"] }  # inline batch storage, no heap alloc for ≤N items
dashmap = "5.5"                          # lock-free concurrent HashMap
kanal = "0.1"                            # fast MPMC channel (replaces SegQueue + sleep)
bytes = { version = "1.5", features = ["serde"] }  # zero-copy buffers (serde for MVCC AOF)
crossbeam = "0.8"                        # crossbeam utilities
crossbeam-channel = "0.5"               # used in WAL batch writer
num_cpus = "1.16"                        # parallel reducer workers
hdrhistogram = "7.5"                     # latency percentile tracking (bench + end_to_end)
arc-swap = "1.6"                         # atomic Arc swaps for hot config
flume = "0.11"                           # backup MPSC channel

# MVCC engine + Redis/PostgreSQL protocol layers
im            = { version = "15", features = ["serde"] }   # persistent HAMT/Vector/OrdSet — O(1) version clones
ordered-float = { version = "4", features = ["serde"] }    # total-ordered f64 for sorted-set score index
sqlparser     = "0.45"                                     # PostgreSQL-dialect SQL parser (pg wire layer)

# Macro support: auto-registration of #[reducer]-annotated functions
inventory    = "0.3"
neondb-macros = { path = "neondb-macros" }

flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ureq = { version = "2.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["rt"] }
prometheus = { version = "0.13", default-features = false, features = ["process"] }

base64 = "0.21"
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"

# TLS support for WSS (WebSocket Secure)
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
rcgen = "0.12"

# Disk persistence — pure-Rust embedded key-value store (already in local cache)
sled = "0.34"

# WASM reducer backend
wasmtime = { version = "21", features = ["cranelift"] }
wat = "1.0"
rquickjs = { version = "0.12.0", features = ["full"] }
[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# ── Standalone benchmark binary ──────────────────────────────────────────────
[[bin]]
name = "neondb-bench"
path = "src/bin/neondb_bench.rs"

# ── Sustained-load soak test binary ──────────────────────────────────────────
[[bin]]
name = "neondb-soak"
path = "src/bin/soak.rs"

# ── High-end simulation / stress test ────────────────────────────────────────
[[bin]]
name = "neondb-sim"
path = "src/bin/sim.rs"

# ── Existing benchmarks ───────────────────────────────────────────────────────
[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "end_to_end"
harness = false

# ── TPS scenario benchmarks ───────────────────────────────────────────────────
[[bench]]
name = "scenario1_pure_engine"
harness = false

[[bench]]
name = "scenario2_full_pipeline"
harness = false

[[bench]]
name = "scenario3_game_genres"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
default = ["simd", "mimalloc"]
simd = []
