[package]
name = "neondb-client"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for NeonDB — self-hosted real-time game backend"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.5"
thiserror = "1.0"
log = "0.4"
dashmap = "5.5"
flate2 = "1.0"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
