[package]
name = "voltra-reducer"
version = "0.1.0"
edition = "2021"
description = "Helper crate for writing Voltra reducers in Rust, targeting wasm32-unknown-unknown"

[lib]
# No crate-type here — this is a library dependency, not the final cdylib.
# The user's crate sets crate-type = ["cdylib"].

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
